<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_calendar_header">

        <SwitchPreferenceCompat
            app:key="calendar_notifications"
            app:summary="@string/calendar_notification_summary"
            app:title="@string/calendar_notifications" />

        <SwitchPreferenceCompat
            app:dependency="calendar_notifications"
            app:key="tomorrow_reminder"
            app:summary="@string/tomorrow_reminder_summary"
            app:title="@string/tomorrow_reminder" />

        <SwitchPreferenceCompat
            app:dependency="calendar_notifications"
            app:key="week_reminder"
            app:summary="@string/week_reminder_summary"
            app:title="@string/next_week_reminder" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_theme_header">

        <SwitchPreferenceCompat
            app:key="darkMode"
            app:summary="@string/theme_summary"
            app:title="@string/change_theme" />

    </PreferenceCategory>

</PreferenceScreen>
